# opcvm-scraper

./: IE0002XZSHO1.json  Makefile  README.md  pyproject.toml
src/: asset.py  fetch.py  metrics.py
tests/: test_fake.py  test_fetch.py  test_metrics.py
