[project]
name = "opcvm-scraper"
version = "0.0.1"
description = "OPCVM scraping tool."
authors = [
    {name="Baptiste Bouillon", email="1bouillonbaptiste@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.10,<4.0"

[tool.poetry]
packages = [
    { include = "src" },
]

[tool.poetry.dependencies]
pandas = "^2.2.3"
requests = "^2.32.3"
types-requests = "^2.32.0.20250515"

[tool.poetry.group.dev.dependencies]
mypy = "^1.15.0"
pytest = "^8.3.5"
pytest-cases = "^3.8.6"
pre-commit = "^4.2.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.report]
skip_empty = true
